# t2v-transformers-models-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.cpu  Dockerfile.gpu  Dockerfile.root.cpu  Dockerfile.root.gpu  README.md  docker-compose.yml
.github/workflows/: main.yaml
benchmarking/: accuracy.ipynb  concurrency.ipynb  direct.py  run.py  server.py
burn/: Cargo.toml  build.rs
burn/model/: mod.rs
ci/: download.py  requirements.txt
ci/bash/: build_root_gpu_image.sh
onnx/: README.md  export.py
src/: main.rs  vec.rs
src/vectorizer/: candle.rs  hf.rs  mod.rs  onnx.rs  shared.rs
