[package]
name = "text2vec-burn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
rayon = "1.9.0"
burn = "0.12.1"
serde = "1.0.197"
tokio = { version = "1.36.0", features = ["full"] }

[build-dependencies]
burn-import = "0.12.1"
